// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DOM to React converts <textarea> correctly 1`] = `
<textarea
  defaultValue="foo"
/>
`;

exports[`DOM to React converts SVG element with viewBox attribute 1`] = `
<svg
  id="foo"
  viewBox="0 0 512 512"
>
  Inner
</svg>
`;

exports[`DOM to React converts multiple DOM nodes to React 1`] = `
Array [
  <p>
    foo
  </p>,
  <p>
    bar
  </p>,
]
`;

exports[`DOM to React converts single DOM node to React 1`] = `
<p>
  foo
</p>
`;

exports[`DOM to React does not escape <script> content 1`] = `
<script
  dangerouslySetInnerHTML={
    Object {
      "__html": "alert(1 < 2);",
    }
  }
/>
`;

exports[`DOM to React does not escape <style> content 1`] = `
<style
  dangerouslySetInnerHTML={
    Object {
      "__html": "body > .foo { color: #f00; }",
    }
  }
/>
`;

exports[`DOM to React does not modify attributes on custom elements 1`] = `
<custom-button
  class="myClass"
  custom-attribute="value"
/>
`;

exports[`DOM to React skips doctype and comments 1`] = `
Array [
  <p>
    foo
  </p>,
  <p>
    foo
  </p>,
]
`;

exports[`DOM to React when React <16 removes unknown attributes 1`] = `
<custom-button
  className="myClass"
/>
`;

exports[`DOM to React when React >=16 preserves unknown attributes 1`] = `
<custom-button
  class="myClass"
  custom-attribute="value"
/>
`;
